--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="myList1">Мой список</string>
     <string name="myList2"><b>Стоп лист</b></string>
+    <string name="add_number">Добавить новый телефон</string>
+    <string name="action_kitten">action_kitten</string>
 </resources>
